--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,3 +13,6 @@ jobs:
       - run: make lint
       - run: make cover
       - run: make build
+      - store_artifacts:
+          path: /go/src/github.com/bitnami/bcrypt-cli/out/bcrypt
+          destination: bcrypt
