--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,10 @@ jobs:
       - run: make lint
       - run: make cover
       - run: make build
+      - run: make build/arm64
       - store_artifacts:
           path: /go/src/github.com/bitnami/bcrypt-cli/out/bcrypt
           destination: bcrypt
+      - store_artifacts:
+          path: /go/src/github.com/bitnami/bcrypt-cli/out/arm64/bcrypt
+          destination: bcrypt-arm64
