--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,12 +37,22 @@ jobs:
         run: make lint
       - name: Cover
         run: make cover
-      - name: Build linux
-        run: make build
-      - name: Build Linux arm64
-        run: make build/arm64
-      - name: Archive Built Binaries
+      - name: Save coverage
         uses: actions/upload-artifact@v2
         with:
-          name: Results
-          path: out
+          name: coverage.html
+          path: out/coverage.html
+      - name: Build linux
+        run: make build
+      - name: Archive Linux arm64
+        uses: actions/upload-artifact@v2
+        with:
+          name: bcrypt-linux-x64
+          path: out/bcrypt
+      - name: Build Linux arm64
+        run: make build/arm64
+      - name: Archive Linux arm64
+        uses: actions/upload-artifact@v2
+        with:
+          name: bcrypt-linux-arm64
+          path: out/arm64/bcrypt
