--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,9 @@ on:
   push:
     branches:
       - master
+    tags:
+      - 'v*.*.*'
+
   pull_request:
 
   # Allows you to run this workflow manually from the Actions tab
@@ -37,22 +40,25 @@ jobs:
         run: make lint
       - name: Cover
         run: make cover
-      - name: Save coverage
-        uses: actions/upload-artifact@v2
-        with:
-          name: coverage.html
-          path: out/coverage.html
       - name: Build linux
-        run: make build
-      - name: Archive Linux arm64
-        uses: actions/upload-artifact@v2
+        run: |
+          rm -rf out/bcrypt
+          make build
+          mv out/bcrypt out/bcrypt-linux-amd64
+          cd out
+          zip -r bcrypt-linux-arm64.zip bcrypt-linux-arm64
+      - name: Build linux/arm64
+        run: |
+          rm -rf out/bcrypt
+          make build/arm64
+          mv out/bcrypt out/bcrypt-linux-arm64
+          cd out
+          zip -r bcrypt-linux-arm64.zip bcrypt-linux-arm64
+      - name: Release
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v1
         with:
-          name: bcrypt-linux-x64
-          path: out/bcrypt
-      - name: Build Linux arm64
-        run: make build/arm64
-      - name: Archive Linux arm64
-        uses: actions/upload-artifact@v2
-        with:
-          name: bcrypt-linux-arm64
-          path: out/arm64/bcrypt
+          files: |
+            out/bcrypt-linux*zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
