--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,4 +64,5 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           path: ./artifacts
-      - run: ls ./artifacts
+      - run: ls ./artifacts/
+      - run: find ./artifacts/
