--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,9 @@ on:
     tags:
       - 'v*.*.*'
 
+  release:
+    types: [published]
+
   pull_request:
 
   # Allows you to run this workflow manually from the Actions tab
